# teraterm

./: .claude-mcp-progress-phase2.5.json  .claude-mcp-progress-phase2.json  .claude-mcp-progress-phase3.json  .claude-mcp-progress.json  .claude-render-fix-progress.json  .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml
ai-assistant/: build.gradle.kts
ai-assistant/src/main/kotlin/com/opentermx/ai/: ApiKeyValidator.kt  ProviderRegistry.kt
ai-assistant/src/test/kotlin/com/opentermx/ai/: ApiKeyValidatorTest.kt
app/: build.gradle.kts
app/src/main/kotlin/com/opentermx/app/: Main.kt
app/src/main/resources/: logback.xml
app/src/main/resources/css/: dark.css  light.css  macro-editor.css
app/src/main/resources/i18n/: messages.properties  messages_en.properties
common/: build.gradle.kts
docs/: ARCHITECTURE.md  device-registry.md  multi-agent.md  operation-context.md  policy-engine.md  snapshots.md
docs/mcp/: CLIENT_TEST_PLAN.md  USER_GUIDE.en.md  USER_GUIDE.md
docs/release/: RELEASE_CHECKLIST.md  SIGNING.md
docs/review/: REVIEW-2026-06.md  REVIEW-mcp-server.md
examples/: operation-context.example.yaml
file-transfer/src/main/java/com/opentermx/transfer/: Crc16.java  TransferDirection.java  TransferException.java  TransferListener.java  TransferStatus.java  TransferStream.java  Xmodem.java  Ymodem.java  Zmodem.java
file-transfer/src/test/java/com/opentermx/transfer/: Crc16Test.java  XmodemRoundtripTest.java  YmodemRoundtripTest.java  ZmodemRoundtripTest.java
gradle/: libs.versions.toml
integrations/: README.md  build.gradle.kts
integrations/src/main/kotlin/com/opentermx/integrations/: HttpSupport.kt  MonitoringIntegration.kt  OpManagerClient.kt  ZabbixClient.kt
integrations/src/test/kotlin/com/opentermx/integrations/: OpManagerClientTest.kt  ZabbixClientTest.kt
logger/: build.gradle.kts
logger/src/main/kotlin/com/opentermx/logger/: AnsiHtmlConverter.kt  HtmlLogWriter.kt  LogConfig.kt  LogFormat.kt  LogManager.kt  LogWriter.kt  PlainLogWriter.kt  RawLogWriter.kt  RotatingFileSink.kt  RotationPolicy.kt  SessionLogger.kt
logger/src/test/kotlin/com/opentermx/logger/: AnsiHtmlConverterTest.kt  RotationTest.kt
macro-engine/: build.gradle.kts
mcp-server/: README.md  build.gradle.kts
mcp-server/src/main/resources/policies/: readonly-commands.yaml
mcp-server/src/main/resources/profiles/: role-rules.yaml
mcp-server/src/main/resources/schemas/: operation-context.schema.json
mcp-server/src/test/python/: conftest.py  pyproject.toml  test_auth.py  test_errors.py  test_inventory.py  test_multi_agent.py  test_operation_context.py  test_policy_engine.py  test_protocol.py  test_snapshots.py  test_tools.py
mcp-server/src/test/resources/: tools-list.snapshot.json
mgmt-adapters/: build.gradle.kts
native/: CMakeLists.txt
native/src/: serial_native.c  serial_native.h  terminal_emu.c  terminal_emu.h
net-parsers/: README.md  build.gradle.kts
net-parsers/src/test/resources/fixtures/: README.md
net-parsers/src/test/resources/fixtures/_dirty/: README.md  cisco_ios_raw_pager_ansi_syslog.bin.txt  cisco_ios_raw_pager_ansi_syslog.cleaned.txt  huawei_raw_latin1_more.bin.txt
net-parsers/src/test/resources/fixtures/aruba_aoscx/: show_interface_aoscx10.06_down.expected.json  show_interface_aoscx10.06_down.txt  show_interface_aoscx10.10_up.expected.json  show_interface_aoscx10.10_up.txt
net-parsers/src/test/resources/fixtures/cisco_ios/: show_interfaces_ios12.4_errdisabled.expected.json  show_interfaces_ios12.4_errdisabled.txt  show_interfaces_ios15.2_basic.expected.json  show_interfaces_ios15.2_basic.txt
net-parsers/src/test/resources/fixtures/cisco_nxos/: show_interface_nxos7.0_down.expected.json  show_interface_nxos7.0_down.txt  show_interface_nxos9.3_up.expected.json  show_interface_nxos9.3_up.txt
net-parsers/src/test/resources/fixtures/fortinet/: diag_hw_nic_port1_fortios7.4.expected.json  diag_hw_nic_port1_fortios7.4.txt  get_system_interface_fortios7.2.expected.json  get_system_interface_fortios7.2.txt
net-parsers/src/test/resources/fixtures/huawei_vrp/: display_interface_vrp5_admindown.expected.json  display_interface_vrp5_admindown.txt  display_interface_vrp8_up.expected.json  display_interface_vrp8_up.txt
net-parsers/src/test/resources/fixtures/mikrotik/: interface_ethernet_monitor_ros6.49.expected.json  interface_ethernet_monitor_ros6.49.txt  interface_print_stats_ros7.expected.json  interface_print_stats_ros7.txt
policies/: baseline-security-cisco-ios.example.yaml
policy-engine/: build.gradle.kts
policy-engine/src/main/resources/schemas/: policy.schema.json
rest-api/: build.gradle.kts
serial-comm/: build.gradle.kts
ssh-comm/: build.gradle.kts
telemetry-db/: README.md  build.gradle.kts
telemetry-db/src/main/resources/catalog-packs/: aruba-aoss-campus.yaml  hpe-comware-campus.yaml
telemetry-db/src/main/resources/db/migration/: V1__init.sql  V2__device_profiles.sql  V3_0__add_vendor_comware.sql  V3_1__catalog.sql
telemetry-db/src/test/resources/catalog-packs-test/: ficticia-lab.yaml
telnet-comm/: build.gradle.kts
tftp-service/: build.gradle.kts
tools/mcp/: README.md  generate_docs.py  pyproject.toml  schema_diff.py  smoke_test.py
(+459 files in other folders)
