[project]
name = "opentermx-mcp-tools"
version = "0.1.0"
description = "Scripts de soporte para el servidor MCP de OpenTermX: smoke test post-deploy, generación de docs de tools, diff de schemas entre versiones."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "click>=8.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project.scripts]
opentermx-mcp-smoke = "smoke_test:main"
opentermx-mcp-gendocs = "generate_docs:main"
opentermx-mcp-schemadiff = "schema_diff:main"