[project]
name = "opentermx-mcp-itests"
version = "0.1.0"
description = "Integration tests black-box del servidor MCP de OpenTermX. Arrancan un proceso JVM con TestServerMain y le pegan HTTP/SSE real."
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "jsonschema>=4.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Test-only project: no hay módulos a empaquetar, sólo se usa para resolver deps.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]